# csv-etl-cli

./: README.md  cli.py  config.yaml  logger.py  pyproject.toml  requirements.txt
src/etl/: cli.py  config.py  logger.py  pipeline.py  processor.py  writer.py
tests/: test_processor.py
